--- a/estilo.css
+++ b/estilo.css
@@ -7,14 +7,11 @@
     !important
 }
 .jumbotron{
-    background-image: url(/imagenes/portada.jpg);
+    background-image: url(imagenes/portada.jpg);
     background-size: cover;
     background-position: center;
     max-width: 100%;
     height: 800px;
-}
-@media only screen and (min-widht:;){
-    
 }
 .footerColor{
     background-color: darkcyan;
