--- a/Servicios/estilo.css
+++ b/Servicios/estilo.css
@@ -7,5 +7,8 @@
     !important
 }
 .footerColor{
-    background-color: darkcyan;
+    background-color: rgb(0, 0, 0);
 }
+.redes{
+    font-size: 25px;
+  }
