--- a/estilo.css
+++ b/estilo.css
@@ -1,62 +1,112 @@
 *{
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 .navbar{
-    background-color: rgb(77, 190, 152);
-    !important
+  background-color: rgb(77, 190, 152);
+  !important
+}
+.home{
+background: url(imagenes/portadahome.png) no-repeat center center fixed;
+display: table;
+position: relative;
+width: 100%;
+height: 840px;
+background-size: cover;
+}
+.landing-text{
+display: table-cell;
+text-align: center;
+vertical-align: middle;
+}
+.landing-text h1{
+font-size: 500%;
+font-weight: 700;
+color: azure;
+}
+.landing-text h3{
+color: rgb(84, 241, 79);
+}
+.padding{
+padding: 80px 0;
 }
 .footerColor{
-    background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0);
 }
 .sectionServicios{
-  background-color: rgb(73, 167, 195);
+background-color: rgb(73, 167, 195);
 }
-
+.imgContacto{
+background: url(imagenes/contactohome.png) no-repeat center center fixed;
+display: table;
+height: 600px;
+position: relative;
+width: 100%;
+background-size: cover;
+}
+.contacto{
+display: table-cell;
+text-align: left;
+vertical-align: middle;
+}
+.contacto h5{
+font-size: 250%;
+font-weight: 700;
+}
+.fontContacto{
+font-size: 200%;
+color: white;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.pcontacto{
+font-size: 200%;
+font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.w{
+background-color: rgba(115, 235, 104, 0.698)
+}
+.fb{
+background-color: rgba(25, 120, 209, 0.698)
+}
+.ig{
+background-color: rgba(219, 150, 21, 0.698)
+}
 .ul{
-    margin-left: 0;
-    padding-left: 0;
-    top: 20px;
-    line-height: 2.2;
+  margin-left: 0;
+  padding-left: 0;
+  top: 20px;
+  line-height: 2.2;
+  list-style-type: none;
 }
 .li{
-  margin-left: 0;
-  text-transform: uppercase;
-  font-size: 40px;
+margin-left: 0;
+text-transform: uppercase;
+font-size: 20px;
 }
 .sectionSobreNosotros{
-  background-color: darkturquoise;
+background-color: rgb(255, 255, 255);
 }
 .pSobreNosotros{
-  font-size: 25px;
-  line-height: 2.1;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+font-size: 120%;
 }
 .sectionUbicacion{
-  background-color: rgb(154, 200, 231);
+background-color: rgba(30, 165, 255, 0.678);
 }
 .imgUbicacion{
-  position: relative;
-  left: 25%;
-
+position: relative;
+left: 25%;
 }
 .spanUbicacion{
-  font-size: 25px;
-  text-transform: uppercase;
-  position: relative;
-  left: 28%;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+font-size: 25px;
+text-transform: uppercase;
+position: relative;
+left: 28%;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .pUbicacion{
-  font-size: 22px;
-  line-height: 1.5;
-}
-.fontRedes{
-  font-size: 25px;
-}
-.sectionContacto{
-  background-color: rgb(203, 255, 216);
+font-size: 22px;
+line-height: 1.5;
 }
 .redes{
-  font-size: 25px;
+font-size: 25px;
 }
