--- a/Servicios/estilo.css
+++ b/Servicios/estilo.css
@@ -6,6 +6,42 @@
     background-color: rgb(77, 190, 152);
     !important
 }
+.home{
+    background: url(../imagenes/portadaservicios.jpg) no-repeat center center fixed;
+    display: table;
+    position: relative;
+    width: 100%;
+    height: 500px;
+    background-size: cover;
+    }
+.landing-text{
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+    }
+.landing-text h1{
+    font-size: 4.5rem;
+    font-weight: 700;
+    color: azure;
+    text-decoration: underline;
+    }
+.padding{
+    padding: 80px;
+}
+.sectionArmados{
+    background-color: rgba(30, 143, 255, 0.376);
+}
+.fontArmados{
+    font-size: 1.4rem;
+}
+.fontRigs{
+    font-size: 1.4rem;
+}
+.li{
+    line-height: 2.8rem;
+    font-size: 1.4rem;
+    font-family: sans-serif;
+}
 .footerColor{
     background-color: rgb(0, 0, 0);
 }
