--- a/reparaciones/estilo.css
+++ b/reparaciones/estilo.css
@@ -1,44 +1,53 @@
-* {
+*{
   margin: 0;
   padding: 0;
 }
-
-body {
-  background-color: cyan;
+.navbar{
+  background-color: rgb(77, 190, 152);
+  !important
 }
-
-header {
-  background-color: beige;
+.home{
+  background: url(../imagenes/portadareparaciones.jpg) no-repeat center center fixed;
+  display: table;
+  position: relative;
   width: 100%;
-  height: 200px;
-}
-
-h1 {
-  color: lightslategray;
+  height: 500px;
+  background-size: cover;
+  }
+.landing-text{
+  display: table-cell;
   text-align: center;
-  font-size: 80px;
-  font-family: "Times New Roman", Times, serif;
+  vertical-align: middle;
+  }
+.landing-text h1{
+  font-size: 3.5rem;
+  font-weight: 700;
+  color: azure;
+  text-decoration: underline;
+  }
+.padding{
+  padding: 80px;
 }
-h1 span {
-  color: gold;
+.sectionSoluciones{
+  background-color: rgba(0, 0, 0, 0.603);
 }
-
-img {
-  display: block;
-  margin: auto;
-  padding: 50px;
-}
-
-footer {
-  background-color: black;
-  height: 182px;
-}
-
-h2 {
+.pReparaciones{
+  font-size: 1.4rem;
   color: white;
-  text-align: center;
-  padding: 40px;
-  font-size: 50px;
+  line-height: 3rem;
 }
-
-/*# sourceMappingURL=estilo.css.map */
+.pProve{
+  font-size: 1.6rem;
+  line-height: 3rem;
+}
+.li{
+  line-height: 2.8rem;
+  font-size: 1.4rem;
+  font-family: sans-serif;
+}
+.footerColor{
+  background-color: rgb(0, 0, 0);
+}
+.redes{
+  font-size: 25px;
+}
