--- a/estilo.css
+++ b/estilo.css
@@ -81,7 +81,7 @@ background-color: rgba(219, 150, 21, 0.698)
 .li{
 margin-left: 0;
 text-transform: uppercase;
-font-size: 20px;
+font-size: 200%;
 }
 .sectionSobreNosotros{
 background-color: rgb(255, 255, 255);
